added styling to ratings

--- a/style.css
+++ b/style.css
@@ -99,6 +99,14 @@ main {
   transition: all 0.5s;
 }
 
+.high-rating {
+  color: #3ba17c;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
 .rate-button:hover {
   background: rgba(255, 255, 255, 0.1);
   border: solid 1px rgba(255, 255, 255, 0.5);
@@ -109,16 +117,40 @@ main {
   main {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .high-rating {
+    color: #3ba17c;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 900px) {
   main {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .high-rating {
+    color: #3ba17c;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   main {
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  .high-rating {
+    color: #3ba17c;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
   }
 }
